--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <label for = "read">Check if already read:</label>
             <input type = "checkbox" id = "read">
         </div>
-        <button id = "submit">Submit</button>
+        <button id = "submit" type="button">Submit</button>
     </form>
     <button id = "add">+</button>
     <div class = "entries">
