--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <button id = "new-entry-container-close">X</button>
         <div class="new-entry">
             <label for = "title">Title:</label>
-            <input type = "text" id = "title" required minlength="1">
+            <input type = "text" id = "title" minlength="1">
         </div>
         <div class="new-entry">
             <label for = "author">Author:</label>
-            <input type = "text" id = "author" required minlength="1">
+            <input type = "text" id = "author" minlength="1">
         </div>
         <div class="new-entry">
             <label for = "pages">Number of Pages:</label>
-            <input type = "text" id = "pages" required minlength="1">
+            <input type = "text" id = "pages" minlength="1">
         </div>
         <div class="new-entry">
             <label for = "read">Check if already read:</label>
