Remove test examples from code

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <label for = "read">Check if already read:</label>
                 <input type = "checkbox" id = "read">
             </div>
-            <button id = "submit" type="button">Submit</button>
+            <button id = "submit-button" type="button">Submit</button>
         </form>
     </div>
-    <button id = "add">+</button>
+    <button id = "add-button">+</button>
     <div id = "entries">
         <table id = "book-table">
             <thead>
