--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             </thead>
         </table>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
     <script src = "script.js"></script>
 </body>
 </html>
