--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>The Library</h1>
     </header>
-    <div id = "new-entry-container" class = "hide">
+    <div id = "new-entry-container" class = "hide" name="myform">
         <div id = new-entry-header>
             <h2>Enter Book Information</h2>
             <button id = "new-entry-form-close">X</button>
@@ -19,21 +19,21 @@
         <form id = "new-entry-form">
             <div class="new-entry">
                 <label for = "title">Title:</label>
-                <input type = "text" id = "title" minlength="1">
+                <input type = "text" id = "title" required maxlength="100">
             </div>
             <div class="new-entry">
                 <label for = "author">Author:</label>
-                <input type = "text" id = "author" minlength="1">
+                <input type = "text" id = "author" required maxlength="40">
             </div>
             <div class="new-entry">
                 <label for = "pages">Number of Pages:</label>
-                <input type = "text" id = "pages" minlength="1">
+                <input type = "number" id = "pages" min=0 max = 10000 required>
             </div>
             <div class="new-entry">
                 <label for = "read">Check if already read:</label>
                 <input type = "checkbox" id = "read">
             </div>
-            <button id = "submit-button" type="button">Submit</button>
+            <button id = "submit-button" type="submit">Submit</button>
         </form>
     </div>
     <button id = "add-button">+</button>
